--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,14 +6,14 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver              # mysql驱动包
     url: jdbc:mysql://localhost:3306/pet_platform?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=GMT%2B8&useSSL=false
-    username: xx
-    password: xx
+    username: root
+    password: "010623"
     type: com.alibaba.druid.pool.DruidDataSource             # 当前数据源操作类型
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
   redis:
-    host: localhost
+    host: 192.168.175.128
     port: 6379
     lettuce:
       pool:
