--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
             <version>1.2.0.CR1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--支付宝支付-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.57.ALL</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
