--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+
+        <!--阿里云短信服务-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
