--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -31,6 +31,9 @@ alipay:
   charset: utf-8
   gatewayUrl: https://openapi.alipaydev.com/gateway.do #此处使用的是沙箱环境的支付宝网关
   logPath: "E:\\alipay.log"
+sms:
+  accessKeyId: xxxxx
+  accessKeySecret: xxxxx
 
 mybatis-plus:
   global-config:
